--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -1,7 +1,7 @@
 .meals {
   max-width: 60rem;
   width: 90%;
-  margin: 2rem auto;
+  margin: 0 3rem;
   animation: meals-appear 1s ease-out forwards;
 }
 
